2023-09-04T16:03:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6075633027 # 1150
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-04
* notice: last 14d: unq all: 13 40
* notice: prev accum: outdated-unq outdated-all / unq all: 242 818 / 256 862
* notice: next accum: outdated-unq outdated-all / unq all: 244 824 / 257 864
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-08-21] / [2023-09-04]

2023-09-03T16:02:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6065472500 # 1147
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-03
* notice: last 14d: unq all: 13 44
* notice: prev accum: outdated-unq outdated-all / unq all: 242 818 / 255 858
* notice: next accum: outdated-unq outdated-all / unq all: 242 818 / 256 862
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
* notice: removed / changed dates: [] / [2023-09-03]

2023-08-30T16:04:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6027284729 # 1135
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-30
* notice: last 14d: unq all: 12 40
* notice: prev accum: outdated-unq outdated-all / unq all: 242 818 / 252 850
* notice: next accum: outdated-unq outdated-all / unq all: 242 818 / 255 858
* notice: prev exec diff / last date diff / accum: unq all: +3 +8 -0 -0 / +3 +8 -0 -0 / 3 8
* notice: removed / changed dates: [] / [2023-08-30]

2023-08-30T00:25:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6018969264 # 1133