@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-04T16:03:54Z",
-  "count_outdated" : 824,
-  "uniques_outdated" : 244,
+  "timestamp" : "2023-09-05T08:07:43Z",
+  "count_outdated" : 826,
+  "uniques_outdated" : 245,
   "count" : 864,
   "uniques" : 257,
   "views" : [
-    {
-      "timestamp": "2023-08-22T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-23T00:00:00Z",
       "count": 14,
