@@ -1,12 +1,7 @@
 {
-  "count": 40,
-  "uniques": 13,
+  "count": 38,
+  "uniques": 12,
   "views": [
-    {
-      "timestamp": "2023-08-22T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-08-23T00:00:00Z",
       "count": 14,
