@@ -1,3 +1,12 @@
+2023-09-05T08:07:43Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6081894760 # 1152
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-05
+* notice: last 14d: unq all: 12 38
+* notice: prev accum: outdated-unq outdated-all / unq all: 244 824 / 257 864
+* notice: next accum: outdated-unq outdated-all / unq all: 245 826 / 257 864
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-08-22] / []
+
 2023-09-04T16:03:54Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6075633027 # 1150
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-04
